The C++17 standard says "A program that jumps from a point where a variable with automatic storage duration is not in scope to a point where it is in scope is ill-formed unless the variable has scalar type, class type with a trivial default constructor and a trivial destructor, a cv-qualified version of one of these types, or an array of one of the preceding types and is declared without an initializer (11.6)." The C++20 standard says "A program that jumps from a point where a variable with automatic storage duration is not in scope to a point where it is in scope is ill-formed unless the variable has vacuous initialization (6.7.3)." and "A variable is said to have vacuous initialization if it is default-initialized and, if it is of class type or a (possibly multi-dimensional) array thereof, that class type has a trivial default constructor." Note that the C++17 standard mentions a trivial destructor here, but the C++20 standard does not. Now consider this code: struct MyStruct { ~MyStruct() {} }; void foo() { goto x; MyStruct s; x: return; } It's ill-formed in C++17, but fine in C++20. However, we currently reject this program even with -std=c++20.
http://www.open-std.org/jtc1/sc22/wg21/docs/cwg_defects.html#2256
Confirmed. The C++ spec was changed by DR2256 which is consider CD5.
(In reply to Andrew Pinski from comment #2) > which is consider CD5. That's just a detail of which draft of was included in, which doesn't mean much. More relevant is that it was approved as a DR so it applies to C++17 (and earlier) too.